--- a/framework/clients/ferrisweb/templates/sample_map.tmpl
+++ b/framework/clients/ferrisweb/templates/sample_map.tmpl
@@ -66,9 +66,9 @@
 <p class="smallsmallheadtitle">» Export:</p>
 <div class="sampleslist">
 	    <ul>
-	      <li><a href="{{ request.META.HTTP_HOST }}/media/{{ analysis_id }}/sampleIDmap.zip">
+	      <li><a href="{{ request.META.HTTP_HOST }}/media/{{ analysis_id }}/sampleIDmap.tar.gz">
 	      Sample ID mapping file</a></li>
-	      <li><a href="{{ request.META.HTTP_HOST }}/media/{{ analysis_id }}/maps/{{ map.instance }}/categoryMap.zip">
+	      <li><a href="{{ request.META.HTTP_HOST }}/media/{{ analysis_id }}/maps/{{ map.instance }}/categoryMap.tar.gz">
 	      Category mapping file</a></li>
 	    </ul>
 </div>
