--- a/framework/clients/ferrisweb/templates/about.tmpl
+++ b/framework/clients/ferrisweb/templates/about.tmpl
@@ -19,9 +19,10 @@
     <li class="step">In the "Add a new BLAST DB" box, type the name you want to save your database under</li>
     <li class="step">Click the "Choose file" button to select a fasta file from your computer. This file should contain the reference sequences that will be included in the database.</li>
     <li class="feedback">The sequence headers in this fasta file are relevant. <br />
-      When fasta files (e.g. pyrosequencing results) are BLASTed against the database you are uploading, sequences in the file will be classified according to the header of the sequence they aligned with. There are currently two supported formats for these headers:
-      <p>ID only - e.g. "&gt;145928". Each sequence in the DB has a unique id in this format. Query sequences will be given the label of the sequence they are aligned with. </p>
-      <p>Additional info - e.g. "&gt;5524211|gb|AAD44166.1|Elephas maximus|Elephas maximus maximus". If the header of a sequence in the database contains a pipe (|) character, it will be split into sections at each pipe and query sequences that align with it will be labeled according to the fourth section. E.g. query sequences that match a reference sequence with the above header will be labeled "Elephas maximus". The first section should still be a uniqe id for every reference sequence. This format is used because it's how the file we already have is arranged. <br />If you have a file in some other format, don't go through and change every line of it, let me (johnnybrown7@gmail.com) know and I'll fix viamics to handle the format you have.</p>
+      When fasta files (e.g. pyrosequencing results) are BLASTed against the database you are uploading, sequences in the file will be classified according to the header of the sequence they aligned with. There are currently several supported formats for these headers:
+
+      {{ headerhelp|safe }}
+
     </li>
     <li class="step">After selecting a file, click the "upload" button to add your database. </li>
     <li class="feedback">If the database creation succeeds, a popup window will appear with the message "uploaded", and after clicking OK the name you provided will appear in the list of databases</li>
